Updated Test Cases